--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,21 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
-plugins {
+/*plugins {
     id 'com.android.application' version '7.2.2' apply false
     id 'com.android.library' version '7.2.2' apply false
     id 'org.jetbrains.kotlin.android' version '1.7.10' apply false
-}
+}*/
+buildscript {
+    repositories {
+        google()
+        mavenCentral()
 
+    }
+    dependencies {
+        classpath 'com.android.tools.build:gradle:7.0.4'
+        classpath 'org.jetbrains.kotlin:kotlin-gradle-plugin:1.7.10'
+        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:2.5.3"
+    }
+}
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
