--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,7 +44,10 @@ dependencies {
     implementation 'androidx.security:security-crypto-ktx:1.1.0-alpha05'
     def nav_version = "2.5.3"
     def hilt_version = "2.45"
-    def lifecycle_version = "2.5.1"
+    def retrofit_version = "2.9.0"
+    def okhttp_version = "4.10.0"
+    def logging_version = "5.0.0-alpha.1"
+    def coroutine_lifecycle_version = "2.4.1"
 
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.6.1'
@@ -62,6 +65,23 @@ dependencies {
     implementation "com.google.dagger:hilt-android:$hilt_version"
     kapt "com.google.dagger:hilt-compiler:$hilt_version"
 
+    //Retrofit
+    implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
+    implementation "com.squareup.retrofit2:converter-gson:$retrofit_version"
+
+    //Okhttp
+    implementation "com.squareup.okhttp3:okhttp:$okhttp_version"
+
+    //logging interceptor
+    implementation "com.squareup.okhttp3:logging-interceptor:$logging_version"
+
+    //Coroutines
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.7'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.2'
+
+    // Coroutine Lifecycle Scopes
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$coroutine_lifecycle_version"
+    implementation "androidx.lifecycle:lifecycle-runtime-ktx:$coroutine_lifecycle_version"
 
 
 
