--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,7 +10,7 @@ plugins {
 }
 
 android {
-    compileSdk 32
+    compileSdk 33
 
     defaultConfig {
         applicationId "com.leventsurer.rickandmorty"
@@ -49,6 +49,7 @@ dependencies {
     def okhttp_version = "4.10.0"
     def logging_version = "5.0.0-alpha.1"
     def coroutine_lifecycle_version = "2.4.1"
+    def glide_version = "4.15.0"
 
     implementation 'androidx.core:core-ktx:1.9.0'
     implementation 'androidx.appcompat:appcompat:1.6.1'
@@ -83,6 +84,10 @@ dependencies {
     // Coroutine Lifecycle Scopes
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$coroutine_lifecycle_version"
     implementation "androidx.lifecycle:lifecycle-runtime-ktx:$coroutine_lifecycle_version"
+
+    //Glide
+    implementation "com.github.bumptech.glide:glide:$glide_version"
+    annotationProcessor "com.github.bumptech.glide:compiler:$glide_version"
 
 
 
